--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,16 @@ div#texto {
   padding-left: 1%;
 }
 
+div#artigos {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+article {
+  width: 30%;
+}
+
 h1 {
   font-size: var(--tamanho-fonte-lg);
   text-align: center;
@@ -57,6 +67,13 @@ h2 {
   font-style: bold;
   text-align: center;
 }
+
+h3 {
+  font-size: 1.1rem;
+  font-style: bold;
+  text-align: center;
+}
+
 a {
   text-decoration: none;
 }  
