--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,16 @@
 
 /* RESET */
 :root {
-  --primaria: #FFAEBC;
-  --secundaria: #A0E7E5;
+  --primaria: rgb(159 0 255 / 21%);
+  --secundaria: rgb(159 0 255 / 50%);
   --terciaria: #B4F8C8;
   --clara: #FBE7C6;
   --escura: #2b2b2b;
   --tamanho-fonte-md: 16px;
   --tamanho-fonte-sm: .875rem;
-  --tamanho-fonte-lg: 1.5rem;
+  --tamanho-fonte-md1: 1.1rem;
+  --tamanho-fonte-md2: 1.5rem;
+  --tamanho-fonte-lg: 2rem;
 }
 
 * {
@@ -21,19 +23,30 @@
 }
 
 body {
-  padding: 16px;
+  background-color: var(--primaria);
+  
+  padding: 15px;
   display: flex;
   justify-content: center;
   flex-flow: column nowrap;
-}
+  width: 100%;
+}  
 
 header {
+  background-color: var(--secundaria);
   display: flex;
   flex-flow: column nowrap;
   box-shadow: 0px 10px 10px 0 rgb(50 50 50 / 77%);
   padding: 0px 0px 10px 10px;
   margin-bottom: 15px;
   min-width: 300px;
+}    
+
+main {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  padding: 20px 0;
 }  
 
 div#apresentacao {
@@ -41,62 +54,73 @@ div#apresentacao {
   flex-flow: row wrap;
   align-items: center;
   justify-content: left;
-}  
+}    
 
 div#texto {
   width: 300px;
   padding-left: 1%;
-}
+}  
 
 div#artigos {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
-}
+}  
 
 article {
   width: 300px;
-}
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  border: 1px solid #000;
+  padding: 5px;
+  box-shadow: 4px 9px 11px 0 rgb(50 50 50 / 77%);
+  margin: 10px;
+}  
 
 h1 {
   font-size: var(--tamanho-fonte-lg);
   text-align: center;
-}
+}  
 
 h2 {
-  font-size: 1.2rem;
-  font-style: bold;
+  font-size: var(--tamanho-fonte-md2);
+  font-weight: bold;
   text-align: center;
-}
+}  
 
 h3 {
-  font-size: 1.1rem;
-  font-style: bold;
+  font-size: var(--tamanho-fonte-md1);
+  font-weight: bold;
   text-align: center;
-}
+}  
+
+h4 {
+  font-size: var(--tamanho-fonte-md);
+  font-weight: bold;
+  text-align: center;
+}  
 
 a {
   text-decoration: none;
-}  
+}    
 
 .hover {
   background-color: var(--escura);
   color: var(--secundaria);
+}    
+
+p {
+  text-align: justify;
 }  
 
 ul {
   list-style: none;
-}  
+}    
 
 fieldset legend {
   font-size: var(--tamanho-fonte-sm);
-}  
-main {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-}  
-
+}      
 cite {
   background-color: var(--terciaria);
 }  
