--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,7 @@ div#botoes {
   flex-flow: column wrap;
   align-items: center;
   justify-content: center;
+  padding: 10px;
 }
 
 article {
@@ -132,7 +133,31 @@ h4 {
 
 a {
   text-decoration: none;
-}    
+}
+
+button {
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+	background-color:#7892c2;
+	border-radius:10px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:19px;
+	padding:7px 23px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
+button:hover {
+	background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+	background-color:#476e9e;
+}
+button:active {
+	position:relative;
+	top:1px;
+}
 
 .hover {
   background-color: var(--escura);
